# Hatenna-Market-AI

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
data/: pokemon_metadata.example.csv
market_ai/: __init__.py  bot.py  config.py  db.py  models.py  validate_db.py
market_ai/ai/: __init__.py  llm.py  prompts.py
market_ai/analytics/: __init__.py  advisor.py  agent.py  comparables.py  filters.py  queries.py  stats.py  trends.py
market_ai/commands/: advisor.py  auction_agent.py  deal.py  formatting.py  market.py  predict.py  trend.py  ui.py
market_ai/ml/: __init__.py  predictor.py  train.py
